# django-test-schema

./: README.md
django_test_schema/: pyproject.toml
django_test_schema/mysite/: db.sqlite3  pytest.ini
django_test_schema/mysite/apps/products/: models.py  serializers.py  urls.py  views.py
django_test_schema/mysite/apps/products/migrations/: 0001_initial.py  0002_alter_product_table.py
django_test_schema/mysite/apps/users/: models.py  serializers.py  urls.py  views.py
django_test_schema/mysite/apps/users/migrations/: 0001_initial.py  0002_alter_user_options_alter_userprofile_options_and_more.py
django_test_schema/mysite/project/: settings.py  urls.py
django_test_schema/mysite/tests/: conftest.py
django_test_schema/mysite/tests/fixtures/: products.json  users.json
django_test_schema/mysite/tests/products/: test_apis.py
django_test_schema/mysite/tests/users/: test_apis.py
